--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         .guide-icon {
             font-size: 4rem;
             margin-bottom: 20px;
+            width: 60px;
         }
 
         .guide-title {
@@ -93,7 +94,7 @@
 </head>
 <body>
     <div class="landing-container">
-        <h1 class="landing-title">Deviens un Pro du Développement Web 🚀</h1>
+        <h1 class="landing-title">Deviens un Pro du Développement Web</h1>
 
         <p class="landing-description">
             Maîtrise le développement web de A à Z ! Découvre nos guides complets sur HTML, CSS, JavaScript, Bootstrap 5 et Git. Tout ce dont tu as besoin pour devenir un pro du code, expliqué simplement et efficacement.
@@ -101,31 +102,48 @@
 
         <div class="guides-grid">
             <a href="html-guide.html" class="guide-card html-card">
-                <div class="guide-icon">📚</div>
+                <div class="guide-icon"><svg viewBox="0 0 520 520" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#E34F26" d="M41 460L0 0h451l-41 460-185 52"/>
+                <path fill="#EF652A" d="M226 472l149-41 35-394H226"/>
+                <path fill="#EBEBEB" d="M226 208h-75l-5-58h80V94H84l15 171h127zm0 147l-64-17-4-45h-56l7 89 117 32z"/>
+                <path fill="#FFF" d="M226 265h69l-7 73-62 17v59l115-32 16-174H226zm0-171v56h136l5-56z"/>
+            </svg></div>
                 <h2 class="guide-title">Guide HTML</h2>
                 <p class="guide-subtitle">Toutes les balises HTML expliquées simplement pour structurer tes pages web</p>
             </a>
 
             <a href="css-guide.html" class="guide-card css-card">
-                <div class="guide-icon">🎨</div>
+                <div class="guide-icon"><svg viewBox="0 0 520 520" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#264de4" d="M71.357 460.819L30.272 0h451.456l-41.129 460.746L255.724 512z"/>
+                <path fill="#2965f1" d="M405.388 431.408l35.148-393.73H256v435.146z"/>
+                <path fill="#ebebeb" d="M124.46 208.59l5.065 56.517H256V208.59zM119.419 150.715H256V94.197H114.281zM256 355.372l-.248.066-62.944-16.996-4.023-45.076h-56.736l7.919 88.741 115.772 32.14.26-.073z"/>
+                <path fill="#fff" d="M255.805 208.59v56.517H325.4l-6.56 73.299-63.035 17.013v58.8l115.864-32.112.85-9.549 13.28-148.792 1.38-15.176 10.203-114.393H255.805v56.518h79.639L330.3 208.59z"/>
+            </svg></div>
                 <h2 class="guide-title">Guide CSS</h2>
                 <p class="guide-subtitle">Toutes les propriétés CSS pour styliser et animer tes créations</p>
             </a>
 
             <a href="js-guide.html" class="guide-card js-card">
-                <div class="guide-icon">⚡</div>
+                <div class="guide-icon"><svg viewBox="0 0 630 630" xmlns="http://www.w3.org/2000/svg">
+                <rect width="630" height="630" fill="#f7df1e"/>
+                <path d="m423.2 492.19c12.69 20.72 29.2 35.95 58.4 35.95 24.53 0 40.2-12.26 40.2-29.2 0-20.3-16.1-27.49-43.1-39.3l-14.8-6.35c-42.72-18.2-71.1-41-71.1-89.2 0-44.4 33.83-78.2 86.7-78.2 37.64 0 64.7 13.1 84.2 47.4l-46.1 29.6c-10.15-18.2-21.1-25.37-38.1-25.37-17.34 0-28.33 11-28.33 25.37 0 17.76 11 24.95 36.4 35.95l14.8 6.34c50.3 21.57 78.7 43.56 78.7 93 0 53.3-41.87 82.5-98.1 82.5-54.98 0-90.5-26.2-107.88-60.54zm-209.13 5.13c9.3 16.5 17.76 30.45 38.1 30.45 19.45 0 31.72-7.61 31.72-37.2v-201.3h59.2v202.1c0 61.3-35.94 89.2-88.4 89.2-47.4 0-74.85-24.53-88.81-54.075z"/>
+            </svg></div>
                 <h2 class="guide-title">Guide JavaScript</h2>
                 <p class="guide-subtitle">Maîtrise le DOM et rends tes pages interactives avec JavaScript</p>
             </a>
 
             <a href="bootstrap-guide.html" class="guide-card bootstrap-card">
-                <div class="guide-icon">🚀</div>
+                <div class="guide-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 118">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="#7952B3"/>
+            </svg></div>
                 <h2 class="guide-title">Guide Bootstrap 5</h2>
                 <p class="guide-subtitle">Toutes les classes Bootstrap pour développer rapidement et efficacement</p>
             </a>
 
             <a href="git-guide.html" class="guide-card git-card">
-                <div class="guide-icon">🔀</div>
+                <div class="guide-icon"><svg viewBox="0 0 92 92" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#F05032" d="M90.156 41.965L50.036 1.848a5.913 5.913 0 0 0-8.368 0l-8.332 8.332 10.566 10.566a7.03 7.03 0 0 1 7.23 1.684 7.043 7.043 0 0 1 1.673 7.277l10.183 10.184a7.026 7.026 0 0 1 7.278 1.672 7.04 7.04 0 0 1 0 9.957 7.045 7.045 0 0 1-9.961 0 7.038 7.038 0 0 1-1.532-7.66l-9.5-9.497V59.36a7.04 7.04 0 0 1 1.86 11.29 7.04 7.04 0 0 1-9.957 0 7.04 7.04 0 0 1 0-9.958 7.034 7.034 0 0 1 2.308-1.539V33.926a7.001 7.001 0 0 1-2.308-1.535 7.049 7.049 0 0 1-1.516-7.7L29.242 14.273 1.734 41.777a5.918 5.918 0 0 0 0 8.371l40.12 40.118a5.918 5.918 0 0 0 8.371 0l39.931-39.934a5.914 5.914 0 0 0 0-8.367"/>
+            </svg></div>
                 <h2 class="guide-title">Guide Git</h2>
                 <p class="guide-subtitle">Toutes les commandes Git pour versionner ton code comme un pro</p>
             </a>
