Suppress Icon before h2 (aside)

--- a/bootstrap-guide.html
+++ b/bootstrap-guide.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <aside>
-        <h1>📚 Guide Bootstrap 5</h1>
+        <h1>Guide Bootstrap 5</h1>
         <p class="subtitle">Toutes les classes Bootstrap 5 expliquées simplement</p>
         <p>
             <a href="html-guide.html">Guide HTML</a>
