--- a/css-guide.html
+++ b/css-guide.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <aside>
-        <h1>🎨 Le Guide Complet du CSS</h1>
+        <h1>Le Guide Complet du CSS</h1>
         <p class="subtitle">Toutes les propriétés CSS expliquées simplement !</p>
         <p>
             <a href="html-guide.html">Guide HTML</a>
