--- a/git-guide.html
+++ b/git-guide.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <aside>
-        <h1>🔀 Guide Git</h1>
+        <h1>Guide Git</h1>
         <p class="subtitle">Toutes les commandes Git expliquées simplement</p>
         <p>
             <a href="html-guide.html">Guide HTML</a>
