--- a/html-guide.html
+++ b/html-guide.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <aside>
-        <h1>📚 Le Guide Complet des Balises HTML</h1>
+        <h1>Le Guide Complet des Balises HTML</h1>
         <p class="subtitle">Toutes les balises HTML expliquées simplement !</p>
         <p>
             <a href="css-guide.html">Guide CSS</a>
