--- a/js-guide.html
+++ b/js-guide.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <aside>
-        <h1>⚡ Le Guide JavaScript & DOM</h1>
+        <h1>Le Guide JavaScript & DOM</h1>
         <p class="subtitle">Toutes les commandes JavaScript pour manipuler le DOM !</p>
         <p>
             <a href="html-guide.html">Guide HTML</a>
