--- a/css-guide.html
+++ b/css-guide.html
@@ -15,6 +15,8 @@
             <a href="js-guide.html">Guide JavaScript</a>
             <a href="bootstrap-guide.html">Guide Bootstrap</a>
             <a href="git-guide.html">Guide Git</a>
+            <a href="php-guide.html">Guide PHP</a>
+            <a href="mysql-guide.html">Guide MySQL</a>
         </p>
     </aside>
 
