Ajout des favoris

--- a/bootstrap-guide.html
+++ b/bootstrap-guide.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide Bootstrap 5</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#3498db">
 </head>
 <body>
+    <div id="progress-bar"></div>
+
+    <button id="theme-toggle" onclick="toggleTheme()">
+        <span id="theme-toggle-icon">🌙</span>
+    </button>
     <aside>
         <h1>Guide Bootstrap 5</h1>
         <p class="subtitle">Toutes les classes Bootstrap 5 expliquées simplement</p>
@@ -17,6 +24,7 @@
             <a href="git-guide.html">Guide Git</a>
             <a href="php-guide.html">Guide PHP</a>
             <a href="mysql-guide.html">Guide MySQL</a>
+            <a href="favoris.html" class="fav-link">⭐ Favoris <span id="fav-count"></span></a>
         </p>
     </aside>
 
@@ -702,37 +710,14 @@
         </p>
     </footer>
 
+    <script src="app.js"></script>
     <script>
-        const searchInput = document.getElementById('searchInput');
-        const allCards = document.querySelectorAll('.tag-card');
-
-        searchInput.addEventListener('input', function() {
-            const searchTerm = this.value.toLowerCase().trim();
-
-            // Réinitialiser tous les backgrounds
-            allCards.forEach(card => {
-                card.style.backgroundColor = '';
-            });
-
-            if (searchTerm === '') return;
-
-            // Chercher dans les h3
-            let firstMatch = null;
-            allCards.forEach(card => {
-                const h3 = card.querySelector('h3');
-                if (h3 && h3.textContent.toLowerCase().includes(searchTerm)) {
-                    card.style.backgroundColor = '#fff3cd';
-                    if (!firstMatch) {
-                        firstMatch = card;
-                    }
-                }
-            });
-
-            // Scroller vers le premier résultat
-            if (firstMatch) {
-                firstMatch.scrollIntoView({ behavior: 'smooth', block: 'center' });
-            }
-        });
+        // Enregistrer le Service Worker
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then((reg) => console.log('Service Worker enregistré', reg))
+                .catch((err) => console.log('Erreur Service Worker', err));
+        }
     </script>
 </body>
 </html>
