--- a/favoris.html
+++ b/favoris.html
@@ -152,6 +152,12 @@
             color: var(--text-light);
             font-size: 0.9em;
         }
+
+        /* Footer pleine largeur pour cette page */
+        footer {
+            width: 100% !important;
+            margin-left: 0 !important;
+        }
     </style>
 </head>
 <body>
