Ajout du guide du debutant

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
             Maîtrise le développement web de A à Z ! Découvre nos guides complets sur HTML, CSS, JavaScript, Bootstrap 5, Git, PHP 8 et MySQL 9. Tout ce dont tu as besoin pour devenir un pro du code, expliqué simplement et efficacement.
         </p>
 
+        <div style="text-align: center; margin: 30px 0;">
+            <a href="introduction.html" style="display: inline-block; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 15px 40px; border-radius: 50px; text-decoration: none; font-size: 1.1rem; font-weight: 600; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4); transition: all 0.3s ease;">
+                🚀 Par où commencer ? Guide du débutant
+            </a>
+        </div>
+
         <div class="guides-grid">
             <a href="html-guide.html" class="guide-card html-card">
                 <div class="guide-icon"><svg viewBox="0 0 520 520" xmlns="http://www.w3.org/2000/svg">
