--- a/css-guide.html
+++ b/css-guide.html
@@ -1971,7 +1971,7 @@ element.addEventListener('animationend', () => {
     <script>
         // Enregistrer le Service Worker
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('./service-worker.js')
                 .then((reg) => console.log('Service Worker enregistré', reg))
                 .catch((err) => console.log('Erreur Service Worker', err));
         }
