--- a/git-guide.html
+++ b/git-guide.html
@@ -690,7 +690,7 @@ git restore --staged .</code>
     <script>
         // Enregistrer le Service Worker
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('./service-worker.js')
                 .then((reg) => console.log('Service Worker enregistré', reg))
                 .catch((err) => console.log('Erreur Service Worker', err));
         }
