--- a/html-guide.html
+++ b/html-guide.html
@@ -1325,7 +1325,7 @@ France</code>
     <script>
         // Enregistrer le Service Worker
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('./service-worker.js')
                 .then((reg) => console.log('Service Worker enregistré', reg))
                 .catch((err) => console.log('Erreur Service Worker', err));
         }
