--- a/js-guide.html
+++ b/js-guide.html
@@ -1061,7 +1061,7 @@ observer.observe(chatBox, { childList: true });</code>
     <script>
         // Enregistrer le Service Worker
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('./service-worker.js')
                 .then((reg) => console.log('Service Worker enregistré', reg))
                 .catch((err) => console.log('Erreur Service Worker', err));
         }
