--- a/php-guide.html
+++ b/php-guide.html
@@ -1068,7 +1068,7 @@ $apiKey = $config['api_key'] ?? throw new ConfigException("API key non configur√
     <script>
         // Enregistrer le Service Worker
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('./service-worker.js')
                 .then((reg) => console.log('Service Worker enregistr√©', reg))
                 .catch((err) => console.log('Erreur Service Worker', err));
         }
